fix homeworks